external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-dns
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.7.6
        args:
        - --source=ingress # ingress is also possible, or service
        - --domain-filter=k8s-nsk.tk # (optional) limit to only example.com domains; change to match the zone created above.
        - --provider=hetzner # [link](https://github.com/kubernetes-sigs/external-dns)
        - --txt-owner-id=bttrm-eks-dev-1-external-dns # Key from you mind
        - --log-level=info
        - --interval=30s
